include/pinbridge/pinbridge.h

typedef int32_t PbStatus;
typedef int32_t PbTri;
/* Borrowed instruction token. It is only valid in the Pin callback window. */
typedef struct PbInsHandle
{
    int32_t opaque;
} PbInsHandle;
/* Borrowed routine token returned by an INS inspection query. */
typedef struct PbRtnHandle
{
    int32_t opaque;
} PbRtnHandle;
typedef struct PbBblHandle
{
    int32_t opaque;
} PbBblHandle;
typedef struct PbSecHandle
{
    int32_t opaque;
} PbSecHandle;
typedef struct PbImgHandle
{
    int32_t opaque;
} PbImgHandle;
typedef struct PbSymHandle
{
    int32_t opaque;
} PbSymHandle;
/* TRACE is a borrowed pointer in Pin 3.31, not an INDEX token. */
typedef struct PbTraceOpaque* PbTraceHandle;
/* Borrowed CONTEXT pointer. Consumers must not dereference or retain it. */
typedef struct PbContextOpaque* PbContextHandle;
typedef const struct PbContextOpaque* PbConstContextHandle;
/* Borrowed physical register context. Consumers must not dereference or retain it. */
typedef struct PbPhysicalContextOpaque* PbPhysicalContextHandle;
typedef const struct PbPhysicalContextOpaque* PbConstPhysicalContextHandle;
/* Opaque Pin-owned global configuration. There is no SDK destroy operation. */
typedef struct PbPinConfigurationOpaque* PbPinConfigurationHandle;
/* Borrowed XED decode object. Valid only while PbXedDecodeCallback is running. */
typedef struct PbXedDecodedInstOpaque* PbXedDecodedInstHandle;
/* Borrowed, logically opaque Pin exception info. NULL means details are not requested. */
typedef struct PbExceptionInfoOpaque* PbExceptionInfoHandle;
/* Owning synchronization handles. Release each with its matching fini/destroy API. */
typedef struct PbLockOpaque* PbLockHandle;
typedef struct PbMutexOpaque* PbMutexHandle;
typedef struct PbRwMutexOpaque* PbRwMutexHandle;
typedef struct PbSemaphoreOpaque* PbSemaphoreHandle;
/* Borrowed child-process handle. Valid only while PbFollowChildProcessCallback runs. */
typedef struct PbChildProcessOpaque* PbChildProcessHandle;
/* Numeric identities from the matched Pin 3.31 SDK build. */
typedef uint32_t PbRegId;
typedef uint32_t PbRegName;
typedef uint32_t PbRegWidth;
typedef uint32_t PbRegAccess;
typedef uint32_t PbRegAllocType;
typedef uint32_t PbRegClass;
typedef uint32_t PbRegSubclass;
typedef uint64_t PbRegClassBits;
typedef uint32_t PbIargType;
typedef int32_t PbCallOrder;
typedef uint32_t PbPinErrorType;
typedef uint32_t PbPinErrorSeverity;
typedef uint32_t PbProcessorState;
typedef uint32_t PbSecType;
typedef uint32_t PbThreadId;
typedef uint32_t PbOsProcessId;
typedef uint32_t PbOsThreadId;
typedef uint64_t PbPinThreadUid;
typedef int32_t PbTlsKey;
typedef uint32_t PbAttachStatus;
typedef uint32_t PbContextChangeReason;
typedef uint32_t PbExceptHandlingResult;
typedef uint32_t PbForkPoint;
typedef uint32_t PbCallbackType;
typedef uint32_t PbReplayMode;
typedef uint32_t PbSmcMode;
typedef uint32_t PbSymbolInfoMode;
typedef uint32_t PbIpoint;
typedef uint32_t PbBufferId;
typedef uint32_t PbImgProperty;
typedef uint32_t PbImgType;
typedef uint32_t PbSyscallStandard;
typedef uint32_t PbUndecoration;
typedef uint32_t PbCallingStandard;
typedef uint32_t PbProtoArgKind;
typedef uint32_t PbMemoryType;
typedef uint32_t PbPredicate;
typedef uint32_t PbXedRegId;
typedef uint32_t PbProbeMode;
typedef uint32_t PbPinMemop;
typedef uint32_t PbPinOpElementAccess;
typedef uint32_t PbLogType;
typedef uint32_t PbMessageKind;
typedef struct PbIargListOpaque* PbIargListHandle;
typedef struct PbKnobOpaque* PbKnobHandle;
typedef uint32_t PbKnobMode;
typedef uint32_t PbDebuggerType;
typedef uint32_t PbDebuggingEvent;
typedef uint32_t PbDebugConnectionType;
typedef uint32_t PbDebugModeOption;
typedef uint32_t PbDebugStatus;
typedef uint32_t PbExceptionClass;
typedef uint32_t PbExceptionCode;
typedef uint32_t PbFaultyAccessType;
typedef uint32_t PbFpError;
typedef struct PbProtoOpaque* PbProtoHandle;
#define PB_CALL_ORDER_FIRST ((PbCallOrder)100)
#define PB_CALL_ORDER_DEFAULT ((PbCallOrder)200)
#define PB_CALL_ORDER_LAST ((PbCallOrder)300)
#define PB_PIN_ERROR_ARGUMENT_LIMIT 8u
/* ABI-owned register bitmap. Bit N represents PbRegId N. The maximum is a
   storage limit, not proof that a value is a valid REG in the matched SDK. */
#define PB_REGSET_WORD_COUNT 16u
#define PB_REGSET_MAX_REG_ID ((PB_REGSET_WORD_COUNT * 64u) - 1u)
/* ABI-owned opaque bytes for the Intel64 promoted FXSAVE memory format. */
#define PB_FXSAVE_SIZE 512u
#define PB_EXCEPTION_INFO_HAS_FAULT_ADDRESS UINT32_C(1)
#define PB_EXCEPTION_INFO_HAS_FP_ERRORS UINT32_C(2)
#define PB_EXCEPTION_INFO_HAS_WINDOWS_DETAILS UINT32_C(4)