bindings/rust/pinbridge-sys/src/bindings.rs

pub const PB_REG_CLASS_PIN_XMM: PbRegClass = 36;
pub const PB_REG_CLASS_PIN_YMM: PbRegClass = 37;
pub const PB_REG_CLASS_PIN_ZMM: PbRegClass = 38;
pub const PB_REG_CLASS_PIN_K: PbRegClass = 39;
pub const PB_REG_CLASS_PIN_TMM: PbRegClass = 40;
pub const PB_REG_CLASS_PIN_X87: PbRegClass = 41;
pub const PB_REG_CLASS_PIN_MXCSR: PbRegClass = 42;
pub const PB_REG_CLASS_PIN_FLAGS: PbRegClass = 43;
pub const PB_REG_CLASS_PIN_STATUS_FLAGS: PbRegClass = 44;
pub const PB_REG_CLASS_PIN_DFLAG: PbRegClass = 45;
pub const PB_REG_SUBCLASS_NONE: PbRegSubclass = 0;
pub const PB_REG_SUBCLASS_REX: PbRegSubclass = 1;
pub const PB_REG_SUBCLASS_FULL_STACKPTR: PbRegSubclass = 2;
pub const PB_REG_SUBCLASS_PIN_FULL_STACKPTR: PbRegSubclass = 3;
pub const PB_REG_SUBCLASS_PIN_TMP: PbRegSubclass = 4;
pub const PB_REG_SUBCLASS_PIN_INST_GR: PbRegSubclass = 5;
pub const PB_REG_SUBCLASS_PIN_INST_GR_H32: PbRegSubclass = 6;
pub const PB_REG_SUBCLASS_PIN_INST_BUF: PbRegSubclass = 7;
pub const PB_REG_SUBCLASS_PIN_INST_COND: PbRegSubclass = 8;
pub const PB_REGCBIT_APP_ALL: PbRegClassBits = 2147483646;
pub const PB_REGCBIT_PIN_ALL: PbRegClassBits = 70366596694016;
pub const PB_REGCBIT_ALL_REGS: PbRegClassBits = 70368744177662;
pub const PB_REGCBIT_APP_FLAGS: PbRegClassBits = 13107200;
pub const PB_REGCBIT_PIN_FLAGS: PbRegClassBits = 61572651155456;
pub const PB_REGCBIT_PARTIAL: PbRegClassBits = 65232961656;
pub const PB_REGSBIT_PIN_INST_ALL: PbRegClassBits = 480;
pub const PB_REGSBIT_PIN_SCRATCH_ALL: PbRegClassBits = 160;
pub const PB_REGSBIT_STACKPTR_ALL: PbRegClassBits = 12;
pub const PB_REG_METADATA_CONSTANT_COUNT: u32 = 100;
pub const PB_PROCESSOR_STATE_X87: PbProcessorState = 0;
pub const PB_PROCESSOR_STATE_XMM: PbProcessorState = 1;
pub const PB_PROCESSOR_STATE_YMM: PbProcessorState = 2;
pub const PB_PROCESSOR_STATE_ZMM: PbProcessorState = 3;
pub const PB_PROCESSOR_STATE_TMM: PbProcessorState = 4;
pub const PB_PROCESSOR_STATE_COUNT: u32 = 5;
pub const PB_SEC_TYPE_INVALID: PbSecType = 0;
pub const PB_SEC_TYPE_UNUSED: PbSecType = 1;
pub const PB_SEC_TYPE_REGREL: PbSecType = 2;
pub const PB_SEC_TYPE_DYNREL: PbSecType = 3;
pub const PB_SEC_TYPE_EXEC: PbSecType = 4;
pub const PB_SEC_TYPE_DATA: PbSecType = 5;
pub const PB_SEC_TYPE_DYNAMIC: PbSecType = 6;
pub const PB_SEC_TYPE_OPD: PbSecType = 7;
pub const PB_SEC_TYPE_GOT: PbSecType = 8;
pub const PB_SEC_TYPE_STACK: PbSecType = 9;
pub const PB_SEC_TYPE_PLTOFF: PbSecType = 10;
pub const PB_SEC_TYPE_HASH: PbSecType = 11;
pub const PB_SEC_TYPE_LSDA: PbSecType = 12;
pub const PB_SEC_TYPE_UNWIND: PbSecType = 13;
pub const PB_SEC_TYPE_UNWINDINFO: PbSecType = 14;
pub const PB_SEC_TYPE_REGSYM: PbSecType = 15;
pub const PB_SEC_TYPE_DYNSYM: PbSecType = 16;
pub const PB_SEC_TYPE_DEBUG: PbSecType = 17;
pub const PB_SEC_TYPE_BSS: PbSecType = 18;
pub const PB_SEC_TYPE_SYMSTR: PbSecType = 19;
pub const PB_SEC_TYPE_DYNSTR: PbSecType = 20;
pub const PB_SEC_TYPE_SECSTR: PbSecType = 21;
pub const PB_SEC_TYPE_COMMENT: PbSecType = 22;
pub const PB_SEC_TYPE_LOOS: PbSecType = 23;
pub const PB_SEC_TYPE_USER: PbSecType = 24;
pub const PB_SEC_TYPE_PROC: PbSecType = 25;
pub const PB_SEC_TYPE_LAST: PbSecType = 26;
pub const PB_SEC_TYPE_COUNT: u32 = 27;
pub const PB_ATTACH_INITIATED: PbAttachStatus = 0;
pub const PB_ATTACH_FAILED_DETACH: PbAttachStatus = 1;
pub const PB_CONTEXT_CHANGE_REASON_FATALSIGNAL: PbContextChangeReason = 0;
pub const PB_CONTEXT_CHANGE_REASON_SIGNAL: PbContextChangeReason = 1;
pub const PB_CONTEXT_CHANGE_REASON_SIGRETURN: PbContextChangeReason = 2;
pub const PB_CONTEXT_CHANGE_REASON_APC: PbContextChangeReason = 3;
pub const PB_CONTEXT_CHANGE_REASON_EXCEPTION: PbContextChangeReason = 4;
pub const PB_CONTEXT_CHANGE_REASON_CALLBACK: PbContextChangeReason = 5;
pub const PB_EHR_HANDLED: PbExceptHandlingResult = 0;
pub const PB_EHR_UNHANDLED: PbExceptHandlingResult = 1;
pub const PB_EHR_CONTINUE_SEARCH: PbExceptHandlingResult = 2;
pub const PB_FPOINT_BEFORE: PbForkPoint = 0;
pub const PB_FPOINT_AFTER_IN_PARENT: PbForkPoint = 1;
pub const PB_FPOINT_AFTER_IN_CHILD: PbForkPoint = 2;
pub const PB_PIN_CALLBACK_TYPE_NONE: PbCallbackType = 0;
pub const PB_PIN_CALLBACK_TYPE_SYSCALL: PbCallbackType = 1;
pub const PB_REPLAY_MODE_NONE: PbReplayMode = 0;
pub const PB_REPLAY_MODE_IMAGEOPS: PbReplayMode = 1;
pub const PB_REPLAY_MODE_ALL: PbReplayMode = 1;
pub const PB_SMC_ENABLE: PbSmcMode = 0;
pub const PB_SMC_DISABLE: PbSmcMode = 1;
pub const PB_NO_SYMBOLS: PbSymbolInfoMode = 0;
pub const PB_EXPORT_SYMBOLS: PbSymbolInfoMode = 1;
pub const PB_DEBUG_SYMBOLS: PbSymbolInfoMode = 2;
pub const PB_IFUNC_SYMBOLS: PbSymbolInfoMode = 4;
pub const PB_DEBUG_OR_EXPORT_SYMBOLS: PbSymbolInfoMode = 3;
pub const PB_CONTROL_ENUM_CONSTANT_COUNT: u32 = 26;
pub const PB_CALL_ORDER_FIRST: PbCallOrder = 100;
pub const PB_CALL_ORDER_DEFAULT: PbCallOrder = 200;
pub const PB_CALL_ORDER_LAST: PbCallOrder = 300;
pub const PB_PIN_ERR_FATAL: PbPinErrorSeverity = 0;
pub const PB_PIN_ERR_NONFATAL: PbPinErrorSeverity = 1;
pub const PB_PIN_ERR_NONE: PbPinErrorType = 0;
pub const PB_PIN_ERR_INTERNAL: PbPinErrorType = 1;
pub const PB_PIN_ERR_ASSERT: PbPinErrorType = 2;
pub const PB_PIN_ERR_TOOL: PbPinErrorType = 3;
pub const PB_PIN_ERR_CMD_LINE: PbPinErrorType = 4;
pub const PB_PIN_ERR_PARSING: PbPinErrorType = 5;
pub const PB_PIN_ERR_NO_APP: PbPinErrorType = 6;
pub const PB_PIN_ERR_INVALID_PLOAD: PbPinErrorType = 7;
pub const PB_PIN_ERR_FILE_NOT_FOUND: PbPinErrorType = 8;
pub const PB_PIN_ERR_ELF_HEADER: PbPinErrorType = 9;
pub const PB_PIN_ERR_NO_PIE: PbPinErrorType = 10;
pub const PB_PIN_ERR_NO_ENTRY_OFFSET: PbPinErrorType = 11;
pub const PB_PIN_ERR_INVALID_ADDRESS: PbPinErrorType = 12;
pub const PB_PIN_ERR_INVALID_ADDRESS_RANGE: PbPinErrorType = 13;
pub const PB_PIN_ERR_CANNOT_LOAD_TOOL: PbPinErrorType = 14;
pub const PB_PIN_ERR_PIN_INJECTION: PbPinErrorType = 15;
pub const PB_PIN_ERR_WAIT_FOR_INJECTOR: PbPinErrorType = 16;
pub const PB_PIN_ERR_BAD_OS_FILE: PbPinErrorType = 17;
pub const PB_PIN_ERR_UNSUPPORTED_OS: PbPinErrorType = 18;
pub const PB_PIN_ERR_BIN32: PbPinErrorType = 19;
pub const PB_PIN_ERR_BIN64: PbPinErrorType = 20;
pub const PB_PIN_ERR_CANNOT_RUN: PbPinErrorType = 21;
pub const PB_PIN_ERR_ATTACH_PID: PbPinErrorType = 22;
pub const PB_PIN_ERR_ATTACH_NYI: PbPinErrorType = 23;
pub const PB_PIN_ERR_ATTACH_REJECTED: PbPinErrorType = 24;
pub const PB_PIN_ERR_ATTACH_PTRACE_SCOPE_1: PbPinErrorType = 25;
pub const PB_PIN_ERR_DETACH_PID: PbPinErrorType = 26;
pub const PB_PIN_ERR_WAIT_PID: PbPinErrorType = 27;
pub const PB_PIN_ERR_STEP_PID: PbPinErrorType = 28;
pub const PB_PIN_ERR_WAIT_EXECV: PbPinErrorType = 29;
pub const PB_PIN_ERR_APP_RESUME: PbPinErrorType = 30;
pub const PB_PIN_ERR_NO_INSTRUMENT: PbPinErrorType = 31;
pub const PB_PIN_ERR_CHILD_PTRACEME: PbPinErrorType = 32;
pub const PB_PIN_ERR_CHILD_RESUME: PbPinErrorType = 33;
pub const PB_PIN_ERR_RELINK_APP: PbPinErrorType = 34;
pub const PB_PIN_ERR_KNOB_BAD: PbPinErrorType = 35;
pub const PB_PIN_ERR_NO_RELOCS: PbPinErrorType = 36;
pub const PB_PIN_ERR_VERSION_SKEW: PbPinErrorType = 37;
pub const PB_PIN_ERR_MS_DOS: PbPinErrorType = 38;
pub const PB_PIN_ERR_LONG_PATH: PbPinErrorType = 39;
pub const PB_PIN_ERR_CANNOT_EXECUTE_FILE: PbPinErrorType = 40;
pub const PB_PIN_ERR_BLOCKSIG_TOOL: PbPinErrorType = 41;
pub const PB_PIN_ERR_BLOCKSIG_APP: PbPinErrorType = 42;
pub const PB_PIN_ERR_USER_SPECIFIED_ERROR: PbPinErrorType = 43;
pub const PB_PIN_ERR_OUT_OF_MEMORY: PbPinErrorType = 44;
pub const PB_PIN_ERR_NON_NUMERIC_STRING: PbPinErrorType = 45;
pub const PB_PIN_ERR_EMPTY_STRING: PbPinErrorType = 46;
pub const PB_PIN_ERR_NUMERIC_FROM_STRING: PbPinErrorType = 47;
pub const PB_PIN_ERR_ALREADY_ATTACHED: PbPinErrorType = 48;
pub const PB_PIN_ERR_ILLEGAL_EXCEPTION: PbPinErrorType = 49;
pub const PB_PIN_ERR_EXCEPTION_NEEDS_ADDR: PbPinErrorType = 50;
pub const PB_PIN_ERR_PREDEFINED_INSTRUMENTATION_FAILED: PbPinErrorType = 51;
pub const PB_PIN_ERR_UNSUPPORTED_SYSCALL: PbPinErrorType = 52;
pub const PB_PIN_ERR_ACCESS_DENIED: PbPinErrorType = 53;
pub const PB_PIN_ERR_INVALID_SUSPEND_REQUEST: PbPinErrorType = 54;
pub const PB_PIN_ERR_DEBUGGER: PbPinErrorType = 55;
pub const PB_PIN_ERR_LAST: PbPinErrorType = 56;
pub const PB_PIN_ERROR_TYPE_COUNT: u32 = 57;
pub const PB_PIN_ERROR_ARGUMENT_LIMIT: u32 = 8;
pub const PB_REGSET_WORD_COUNT: u32 = 16;
pub const PB_REGSET_MAX_REG_ID: u32 = 1023;
pub const PB_FXSAVE_SIZE: u32 = 512;
pub const PB_EXCEPTION_INFO_HAS_FAULT_ADDRESS: u32 = 1;
pub const PB_EXCEPTION_INFO_HAS_FP_ERRORS: u32 = 2;
pub const PB_EXCEPTION_INFO_HAS_WINDOWS_DETAILS: u32 = 4;

pub type PbStatus = i32;
pub type PbTri = i32;
pub type PbRegId = u32;
pub type PbRegName = u32;
pub type PbRegWidth = u32;
pub type PbRegAccess = u32;
pub type PbRegAllocType = u32;
pub type PbRegClass = u32;
pub type PbRegSubclass = u32;
pub type PbRegClassBits = u64;
pub type PbIargType = u32;
pub type PbCallOrder = i32;
pub type PbPinErrorType = u32;
pub type PbPinErrorSeverity = u32;
pub type PbProcessorState = u32;
pub type PbSecType = u32;
pub type PbThreadId = u32;
pub type PbOsProcessId = u32;
pub type PbOsThreadId = u32;
pub type PbPinThreadUid = u64;
pub type PbTlsKey = i32;
pub type PbAttachStatus = u32;
pub type PbContextChangeReason = u32;
pub type PbExceptHandlingResult = u32;
pub type PbForkPoint = u32;
pub type PbCallbackType = u32;
pub type PbReplayMode = u32;
pub type PbSmcMode = u32;
pub type PbSymbolInfoMode = u32;
pub type PbIpoint = u32;
pub type PbBufferId = u32;
pub type PbImgProperty = u32;
pub type PbImgType = u32;
pub type PbSyscallStandard = u32;
pub type PbUndecoration = u32;
pub type PbCallingStandard = u32;
pub type PbProtoArgKind = u32;
pub type PbMemoryType = u32;
pub type PbPredicate = u32;
pub type PbXedRegId = u32;
pub type PbProbeMode = u32;
pub type PbPinMemop = u32;
pub type PbPinOpElementAccess = u32;
pub type PbLogType = u32;
pub type PbMessageKind = u32;
pub type PbKnobMode = u32;
pub type PbDebuggerType = u32;
pub type PbDebuggingEvent = u32;
pub type PbDebugConnectionType = u32;
pub type PbDebugModeOption = u32;
pub type PbDebugStatus = u32;
pub type PbExceptionClass = u32;
pub type PbExceptionCode = u32;
pub type PbFaultyAccessType = u32;
pub type PbFpError = u32;

pub enum PbTraceOpaque {}
pub enum PbContextOpaque {}
pub enum PbPhysicalContextOpaque {}
pub enum PbPinConfigurationOpaque {}
pub enum PbXedDecodedInstOpaque {}
pub enum PbExceptionInfoOpaque {}
pub enum PbLockOpaque {}
pub enum PbMutexOpaque {}
pub enum PbRwMutexOpaque {}
pub enum PbSemaphoreOpaque {}
pub enum PbChildProcessOpaque {}
pub enum PbIargListOpaque {}
pub enum PbKnobOpaque {}
pub enum PbProtoOpaque {}
pub type PbTraceHandle = *mut PbTraceOpaque;
pub type PbContextHandle = *mut PbContextOpaque;
pub type PbConstContextHandle = *const PbContextOpaque;
pub type PbPhysicalContextHandle = *mut PbPhysicalContextOpaque;
pub type PbConstPhysicalContextHandle = *const PbPhysicalContextOpaque;
pub type PbPinConfigurationHandle = *mut PbPinConfigurationOpaque;
pub type PbXedDecodedInstHandle = *mut PbXedDecodedInstOpaque;
pub type PbExceptionInfoHandle = *mut PbExceptionInfoOpaque;
pub type PbLockHandle = *mut PbLockOpaque;
pub type PbMutexHandle = *mut PbMutexOpaque;
pub type PbRwMutexHandle = *mut PbRwMutexOpaque;
pub type PbSemaphoreHandle = *mut PbSemaphoreOpaque;
pub type PbChildProcessHandle = *mut PbChildProcessOpaque;
pub type PbIargListHandle = *mut PbIargListOpaque;
pub type PbKnobHandle = *mut PbKnobOpaque;
pub type PbProtoHandle = *mut PbProtoOpaque;

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbInsHandle {
    pub opaque: i32,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbRtnHandle {
    pub opaque: i32,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbBblHandle {
    pub opaque: i32,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbSecHandle {
    pub opaque: i32,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbImgHandle {
    pub opaque: i32,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbSymHandle {
    pub opaque: i32,
}
